--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:28104/railway
+spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:16584/railway
 spring.datasource.username=root
-spring.datasource.password=5hDhG52bhA3b32aF2a6A2gcHcaFH2Ea-
+spring.datasource.password=ag-fe4E1cg4fGHhdg2fDD4Aef1bebgcc
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
